--- a/pages/style.html
+++ b/pages/style.html
@@ -42,6 +42,24 @@
       </div>
     </div>
   </header>
+  <main>
+    <div class="visual">
+      <div class="m0auto">
+        <h2 class="visual__title">미래부</h2>
+        <p class="visual__subtitle">
+          ‘지지 않는 마음’을 품은 태양 초등 소년소녀부 소년소녀부
+        </p>
+        <div class="visual__img bg3"></div>
+      </div>
+    </div>
+    <div class="container m0auto">
+      <h3 class="heading regular">- 해돋이 부원회 -</h3>
+      <p class="heading small">
+        미래부의 성장이 <br class="only-mobile">
+        학회의 장래를 결정합니다.
+      </p>
+    </div>
+  </main>
 </body>
 
 </html>
