Add component - table

--- a/pages/style.html
+++ b/pages/style.html
@@ -43,6 +43,7 @@
     </div>
   </header>
   <main>
+    <!-- visual -->
     <div class="visual">
       <div class="m0auto">
         <h2 class="visual__title">미래부</h2>
@@ -52,12 +53,34 @@
         <div class="visual__img bg3"></div>
       </div>
     </div>
+    <!-- //visual -->
     <div class="container m0auto">
+      <!-- heading -->
       <h3 class="heading regular">- 해돋이 부원회 -</h3>
       <p class="heading small">
         미래부의 성장이 <br class="only-mobile">
         학회의 장래를 결정합니다.
       </p>
+      <!-- //heading -->
+      <br><br><br>
+      <!-- table -->
+      <table class="table type1">
+        <tbody>
+          <tr>
+            <th>2019년</th>
+            <td>미래부 결성 55주년 창가후계총회</td>
+          </tr>
+          <tr>
+            <th>2017년</th>
+            <td>〈미래저널〉에 ‘미래대화 꿈의 날개’ 연재 시작</td>
+          </tr>
+          <tr>
+            <th>2003년 2월 9일</th>
+            <td>‘정의의 주자’가 미래부가로 ‘용기 있는 한 걸음’이 미래부 애창가로 결정</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- //table -->
     </div>
   </main>
 </body>
